--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -96,7 +96,7 @@
             app:layout_constraintGuide_begin="244dp" />
 
         <TextView
-            android:id="@+id/cals_value"
+            android:id="@+id/cals_eaten_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
@@ -111,13 +111,24 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Calories left out of xxxx"
+            android:text="Calories left out of"
             android:textSize="22sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cals_value" />
+            app:layout_constraintTop_toBottomOf="@+id/cals_eaten_value" />
+
+        <TextView
+            android:id="@+id/cals_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:text="@{viewModel.macros[0]}"
+            android:textSize="22dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline2"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/cals_eaten_value" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
