--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -9,7 +9,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_container"
+        android:id="@+id/calories_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".CalorieFragment">
