--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -114,14 +114,13 @@
             app:layout_constraintTop_toBottomOf="@+id/edittext_weight">
 
             <RadioButton
-                android:id="@+id/radio_button_1"
+                android:id="@+id/radio_button_male"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Male"
-                android:checked="true"/>
+                android:text="Male" />
 
             <RadioButton
-                android:id="@+id/radio_button_2"
+                android:id="@+id/radio_button_female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Female" />
@@ -138,26 +137,28 @@
             app:layout_constraintTop_toBottomOf="@+id/edittext_weight">
 
             <RadioButton
-                android:id="@+id/rectangle_button_1"
+                android:id="@+id/radio_button_deficit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Deficit"
-                android:backgroundTint="@color/white"/>
+                android:backgroundTint="@color/white"
+                android:checked="@{viewModel.deficitOption == 300.0}" />
 
             <RadioButton
-                android:id="@+id/rectangle_button_2"
+                android:id="@+id/radio_button_upkeep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Upkeep"
                 android:backgroundTint="@color/white"
-                android:checked="true"/>
+                android:checked="@{viewModel.deficitOption == 0.0}"/>
 
             <RadioButton
-                android:id="@+id/rectangle_button_3"
+                android:id="@+id/radio_button_bulk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Bulk"
-                android:backgroundTint="@color/white"/>
+                android:backgroundTint="@color/white"
+                android:checked="@{viewModel.deficitOption == -300.0}"/>
 
         </RadioGroup>
 
