--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,12 +12,29 @@
     <fragment
         android:id="@+id/menu_item_food"
         android:name="com.example.fitnessfinal.FoodFragment"
-        android:label="Food"
-        tools:layout="@layout/fragment_food" />
+        android:label="FoodList"
+        tools:layout="@layout/fragment_food" >
+        <action
+            android:id="@+id/action_foodFragment_to_addFragment"
+            app:destination="@id/menu_item_add_food" />
+<!--        <action-->
+<!--            android:id="@+id/action_listFragment_to_updateFragment"-->
+<!--            app:destination="@id/updateFragment" />-->
+    </fragment>
     <fragment
         android:id="@+id/menu_item_settings"
         android:name="com.example.fitnessfinal.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/menu_item_add_food"
+        android:name="com.example.fitnessfinal.fragments.add.AddFragment"
+        android:label="Add food"
+        tools:layout="@layout/fragment_add">
+    <action
+        android:id="@+id/action_addFragment_to_foodFragment"
+        app:destination="@id/menu_item_food" />
+    </fragment>
+
 
 </navigation>
