--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -14,22 +14,40 @@
         android:layout_height="match_parent"
         tools:context=".CalorieFragment">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline3"
+        <TextView
+            android:id="@+id/cals_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="371dp" />
+            android:layout_marginStart="12dp"
+            android:text="@{viewModel.macros[0]}"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline2"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/cals_eaten_value" />
 
+        <TextView
+            android:id="@+id/cals_eaten_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:text="@{viewModel.currentCals}"
+            android:textSize="80sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/proteins_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:text="@{viewModel.macros[1]}"
             android:textAlignment="center"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/proteins_text"
             app:layout_constraintEnd_toStartOf="@+id/fats_value"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
@@ -37,8 +55,10 @@
             android:id="@+id/fats_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
             android:text="@{viewModel.macros[2]}"
             android:textAlignment="center"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/fats_text"
             app:layout_constraintEnd_toStartOf="@+id/carbs_value"
             app:layout_constraintStart_toEndOf="@+id/proteins_value"
@@ -48,12 +68,59 @@
             android:id="@+id/carbs_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
             android:text="@{viewModel.macros[3]}"
             android:textAlignment="center"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/carbs_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/fats_value"
             app:layout_constraintTop_toBottomOf="@id/guideline2" />
+
+        <TextView
+            android:id="@+id/currentProteins"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@{viewModel.currentProteins}"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/proteins_text"
+            app:layout_constraintEnd_toStartOf="@+id/proteins_value"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+        <TextView
+            android:id="@+id/currentFats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@{viewModel.currentFats}"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/fats_text"
+            app:layout_constraintEnd_toStartOf="@+id/fats_value"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+        <TextView
+            android:id="@+id/currentCarbs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@{viewModel.currentCarbs}"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/carbs_text"
+            app:layout_constraintEnd_toStartOf="@id/carbs_value"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calories left out of"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.391"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cals_eaten_value" />
 
         <TextView
             android:id="@+id/proteins_text"
@@ -61,6 +128,7 @@
             android:layout_height="wrap_content"
             android:text="g of proteins"
             android:textAlignment="center"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
             app:layout_constraintEnd_toStartOf="@id/fats_text"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +140,7 @@
             android:layout_height="wrap_content"
             android:text="g of fats"
             android:textAlignment="center"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
             app:layout_constraintEnd_toStartOf="@id/carbs_text"
             app:layout_constraintStart_toEndOf="@+id/proteins_text"
@@ -83,10 +152,19 @@
             android:layout_height="wrap_content"
             android:text="g of carbs"
             android:textAlignment="center"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/fats_text"
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="371dp" />
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -95,40 +173,14 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="244dp" />
 
-        <TextView
-            android:id="@+id/cals_eaten_value"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
-            android:text="@{viewModel.macros[0]}"
-            android:textSize="80sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Calories left out of"
-            android:textSize="22sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.391"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cals_eaten_value" />
-
-        <TextView
-            android:id="@+id/cals_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:text="@{viewModel.macros[0]}"
-            android:textSize="22dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/cals_eaten_value" />
+            android:layout_marginBottom="50dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintGuide_begin="681dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
