--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,115 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5sp"
-    app:cardCornerRadius="10sp"
-    app:cardElevation="10sp"
-    android:padding="24sp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <data>
+
+    </data>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="10sp"
+        app:cardElevation="10sp"
+        android:padding="24sp"
+        android:id="@+id/rowItemLayout">
 
-        <TableRow
-            android:id="@+id/row_1"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp">
+            android:layout_height="match_parent"
+            android:layout_marginStart="12dp">
 
-            <TextView
-                android:id="@+id/tv1"
-                android:layout_width="0sp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10sp"
-                android:layout_weight="1.4"
-                android:text="Name"
-                app:autoSizeTextType="uniform"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeMaxTextSize="32sp"  />
+            <TableRow
+                android:id="@+id/row_0"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv2"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Calories"
-                app:autoSizeTextType="uniform"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeMaxTextSize="24sp"  />
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_weight="10"
+                    android:textSize="24sp"
+                    app:autoSizeMaxTextSize="32sp"
+                    app:autoSizeMinTextSize="16sp" />
 
-            <TextView
-                android:id="@+id/tv3"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Proteins"
-                app:autoSizeTextType="uniform"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeMaxTextSize="24sp"  />
+            </TableRow>
 
-            <TextView
-                android:id="@+id/tv4"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Fats"
-                app:autoSizeTextType="uniform"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeMaxTextSize="24sp"  />
+            <TableRow
+                android:id="@+id/row_1"
+                android:layout_width="match_parent"
+                android:layout_height="28dp"
+                android:layout_below="@id/row_0"
+                android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/tv5"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Carbs"
-                android:textSize="16sp" />
-        </TableRow>
+                <TextView
+                    android:id="@+id/tv2"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Calories"
+                    android:textSize="18sp"
+                    app:autoSizeMaxTextSize="24sp"
+                    app:autoSizeMinTextSize="12sp"
+                    app:autoSizeTextType="uniform" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_below="@id/row_1">
+                <TextView
+                    android:id="@+id/tv3"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Proteins"
+                    android:textSize="18sp"
+                    app:autoSizeMaxTextSize="24sp"
+                    app:autoSizeMinTextSize="12sp"
+                    app:autoSizeTextType="uniform" />
+
+                <TextView
+                    android:id="@+id/tv4"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Fats"
+                    android:textSize="18sp"
+                    app:autoSizeMaxTextSize="32sp"
+                    app:autoSizeMinTextSize="16sp"
+                    app:autoSizeTextType="uniform" />
+
+                <TextView
+                    android:id="@+id/tv5"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Carbs"
+                    android:textSize="18sp"
+                    app:autoSizeMaxTextSize="24sp"
+                    app:autoSizeMinTextSize="12sp"
+                    app:autoSizeTextType="uniform" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_below="@id/row_1">
 
 
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="0sp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10sp"
-                android:layout_weight="1.4"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/tvCals"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="24sp"
+                    app:autoSizeMaxTextSize="32sp"
+                    app:autoSizeMinTextSize="16sp" />
 
-            <TextView
-                android:id="@+id/tvCals"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/tvProteins"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="24sp"
+                    app:autoSizeMaxTextSize="32sp"
+                    app:autoSizeMinTextSize="16sp" />
 
-            <TextView
-                android:id="@+id/tvProteins"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/tvFats"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="24sp"
+                    app:autoSizeMaxTextSize="32sp"
+                    app:autoSizeMinTextSize="16sp" />
 
-            <TextView
-                android:id="@+id/tvFats"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/tvCarbs"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="24sp"
+                    app:autoSizeMaxTextSize="32sp"
+                    app:autoSizeMinTextSize="16sp" />
 
-            <TextView
-                android:id="@+id/tvCarbs"
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="24sp" />
+            </TableRow>
 
-        </TableRow>
-
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+</layout>
