--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -81,8 +81,8 @@
             android:id="@+id/currentProteins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:text="@{viewModel.currentProteins}"
+            android:layout_marginEnd="2dp"
+            android:text="@{viewModel.currentProteins +'/'}"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/proteins_text"
             app:layout_constraintEnd_toStartOf="@+id/proteins_value"
@@ -92,8 +92,8 @@
             android:id="@+id/currentFats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:text="@{viewModel.currentFats}"
+            android:layout_marginEnd="2dp"
+            android:text="@{viewModel.currentFats +'/'}"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/fats_text"
             app:layout_constraintEnd_toStartOf="@+id/fats_value"
@@ -103,8 +103,8 @@
             android:id="@+id/currentCarbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:text="@{viewModel.currentCarbs}"
+            android:layout_marginEnd="2dp"
+            android:text="@{viewModel.currentCarbs +'/'}"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/carbs_text"
             app:layout_constraintEnd_toStartOf="@id/carbs_value"
